# src/app.js
@@ -16,6 +16,7 @@ const admin = require("./config/firebase"); // Sử dụng config chuẩn
 const propertyRoutes = require("./routes/property.routes");
 const propertyTypeRoutes = require("./routes/propertyType.routes");
 const dropboxOAuthRoutes = require("./routes/dropbox-oauth.routes");
+const contactMessageRoutes = require("./routes/contactMessage.routes");
 
 const app = express();
 
@@ -35,6 +36,7 @@ app.use("/api/settings", settingsRoutes);
 app.use("/api/infor", inforRoutes);
 app.use("/api/property", propertyRoutes);
 app.use("/api/property-type", propertyTypeRoutes);
+app.use("/api/contact-message", contactMessageRoutes);
 app.use(dropboxOAuthRoutes);
 
 // Chỉ load Swagger khi file tồn tại
